# Pocket_Dictionary

./: .gitignore  LICENSE  README.md
Clion_Code/: CMakeLists.txt  Todo.txt  local_history1.patch  main.cpp
Clion_Code/Bit_Array/: BitArray.cpp  BitArray.h
Clion_Code/Bit_Array/Naive_bit_array/: n_bit_array.cpp  n_bit_array.h
Clion_Code/CPD/: CPD.cpp  CPD.hpp  CPD_validator.cpp  CPD_validator.hpp  Counters_Array.cpp  Counters_Array.hpp  Naive_Counter_Endec.cpp  Naive_Counter_Endec.hpp
Clion_Code/Constant_size_PD/: const_Body.cpp  const_Body.h  const_Header.cpp  const_Header.h  const_PD.cpp  const_PD.h
Clion_Code/Contiguous_PD/: cg_PD.cpp  cg_PD.h
Clion_Code/Contiguous_PD/constant_contiguous_PD/: cc_PD.h
Clion_Code/Dict/: dict.cpp  dict.hpp  multi_dict.cpp  multi_dict.hpp
Clion_Code/Global_functions/: basic_functions.cpp  basic_functions.h  cuckoo_and_counting_macros.hpp  macros.h
Clion_Code/Hash/: Hash.cpp  Hash.h  Permutation.cpp  Permutation.h  lookup3.c  static_hashing.h
Clion_Code/Hash_Table/: cuckoohash_map.hh  hash_table.cpp  hash_table.hpp  multi_hash_table.cpp  multi_hash_table.hpp
Clion_Code/Naive_PD/: naive_Body.h  naive_Header.cpp  naive_Header.h  naive_PD.h
Clion_Code/PD/: Body.cpp  Body.h  Header.cpp  Header.h  PD.cpp  PD.h  old  spare_pd.cpp  spare_pd.h
Clion_Code/POW2C/: const_filter.cpp  const_filter.h  gen_2Power.cpp  gen_2Power.h  pow2c_filter.cpp  pow2c_filter.h  pow2c_naive_filter.cpp  pow2c_naive_filter.h
Clion_Code/SID/: CSD.cpp  CSD.h  SID.cpp  SID.h
Clion_Code/Safe_PD/: safe_PD.cpp  safe_PD.h  v_Body.cpp  v_Body.h  v_Header.cpp  v_Header.h
Clion_Code/Simple_Crate/: s_crate.cpp  s_crate.h
Clion_Code/Sparse/: sparse.cpp  sparse.hpp
Clion_Code/Tests/: Tests.cpp  Tests.h  benchmark_counting_filter.cpp  benchmark_counting_filter.hpp  benchmark_tests.cpp  benchmark_tests.h  old_benchmark_tests.cpp  old_benchmark_tests.h  test_printer.cpp  test_printer.hpp  validate_bit_op.cpp  validate_bit_op.hpp  validate_counter_PD.cpp  validate_counter_PD.hpp  validate_counters.cpp  validate_counters.hpp  validate_counting_filter.cpp  validate_counting_filter.hpp  validate_dict.hpp  validate_filter.cpp  validate_filter.hpp  validate_hash_table.hpp  validation_tests.cpp  validation_tests.h
Clion_Code/bit_operations/: bit_op.cpp  bit_op.h  bit_word_converter.cpp  bit_word_converter.hpp  my_bit_op.cpp  my_bit_op.hpp
Clion_Code/simple_filter/: simple_filter.cpp  simple_filter.h
Filter_PD/: CMakeLists.txt  main.cpp
Filter_PD/CPD/: CPD.cpp  CPD.hpp  Counters_Array.hpp
Filter_PD/Filters/Dict/: dict.cpp  dict.hpp  multi_dict.cpp  multi_dict.hpp
Filter_PD/Filters/POW2C/: const_filter.h  gen_2Power.h  pow2c_filter.h  pow2c_naive_filter.h
Filter_PD/Global_functions/: basic_functions.cpp  macros.h
Filter_PD/Hash/: Hash.h
Filter_PD/Hash_Table/: hash_table.cpp  hash_table.hpp  hash_table_var.hpp  multi_hash_table.cpp  multi_hash_table.hpp
Filter_PD/PD/Constant_size_PD/: const_Header.cpp
Filter_PD/PD/Contiguous_PD/: cg_PD.cpp  cg_PD.h
Filter_PD/PD/Non_Contiguous_PD/: Body.cpp  Body.h  Header.cpp  Header.h
Filter_PD/PD/Safe_PD/: cc_pd.cpp  cc_pd.hpp  junk.hpp
Filter_PD/Tests/Benchmarking/: benchmark_counting_filter.cpp  benchmark_counting_filter.hpp  benchmark_tests.cpp  benchmark_tests.h
Filter_PD/Tests/Test_output_formatting/: test_printer.cpp  test_printer.hpp
Filter_PD/Tests/Validation/: validate_bit_op.cpp  validate_bit_op.hpp  validate_counters.cpp  validate_counters.hpp  validate_filter.cpp  validate_filter.hpp  validation_tests.cpp  validation_tests.h
Filter_PD/bit_operations/: bit_op.cpp  bit_op.h  bit_word_converter.cpp  bit_word_converter.hpp  my_bit_op.cpp  my_bit_op.hpp
Filter_PD/hash_util/: Hash.cpp  Hash.h  MurmurHash3.cpp  Permutation.h  static_hashing.h
Python_Code/Atom/: pp.py  vector_testing.py
Python_Code/Endec/: Crate_capacity.py  Decoding.py  Lookup_Table.py
Python_Code/PD_Naive/: naive_pd.py  pd.py
Python_Code/PD_str/: str_pd.py
Python_Code/Tests/: __init__.py  test.py
